# repo-docs

./: .gitignore  README.md  flake.nix
.github/workflows/: deploy-pages.yml
docs/: index.md
docs-internal/: index.md
docs/architecture/: overview.md
docs/architecture/advanced/: tree-navigation.md
docs/guides/: configuration.md  development.md  feature-reference.md  getting-started.md  mermaid-diagrams.md  rendering-example.md  typst-manuscripts.md
docs/private/: notes.md
fixtures/haskell-haddock/: repo-docs-haddock-demo.cabal
fixtures/haskell-haddock/src/Demo/: Sample.hs
fixtures/lean-theory/: lake-manifest.json  lakefile.lean
fixtures/lean-theory/Demo/: Proof.lean
fixtures/typst-docs/: index.md
fixtures/typst-docs/Publications/Sample/: index.md
nix/: flake-module.nix  grammar.nix  lib.nix
scripts/: stage-docs-site.mjs
template/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
template/src/: content.config.ts
template/src/components/: DocsMetaBlock.astro  DocsPage.astro  DocsReadingSequence.astro  DocsTitle.astro  MermaidEnhancer.astro  MobileToc.astro  MobileTopBar.astro  SidebarNode.astro  SidebarSection.astro  TableOfContents.astro  ThemeToggle.astro  TypstPdfPage.astro
template/src/integrations/: markdown-link-rewriter.mjs  tree-sitter-highlight.mjs
template/src/layouts/: DocsLayout.astro
template/src/lib/: doc-kind.ts  docs-routes.ts  navigation.ts  site-config.ts
template/src/pages/: index.astro
template/src/pages/tags/: [slug].astro
template/src/styles/: global.css  palette.css
(+6 files in other folders)
